# ssla-manager

./: .gitignore  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.sh  pyproject.toml
sslamanager/: api.py  exceptions.py
sslamanager/database/: ssla_table.py
sslamanager/parser/: ssla_parser.py
sslamanager/parser/templates/ssla/: XMLSchema.xsd  catalog.xml  ccm.xsd  nist.xsd  sla.xsd  ssla_schema.xsd  wsag.xsd
sslamanager/parser/templates/ssla/specs/: capability.xsd  sdt.xsd  security_metric.xsd  slo.xsd
sslamanager/parser/templates/ssla/specs/controls/: ccm.xsd  nist.xsd
sslamanager/test/database/: ssla_table_test.py
sslamanager/test/parser/: ssla_parser_test.py
sslamanager/test/static/: ssla_tls_server_invalid.xml  ssla_tls_server_valid.xml  ssla_tls_server_valid_2.xml  ssla_tls_server_valid_3.xml  ssla_tls_server_valid_modified.xml
